test/good/classes/abstract02.px

class A def
    constructor() abstract

class B(A) def
    constructor() def
        print "B"

B()
