test/bad/classes/destructor03.px

class A def
    destructor() abstract
